# auth-plus-monetization

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  sonar-project.properties
.github/: pull_request_template.md
.github/workflows/: continuous_integration.yml
db/migrations/: 20230327184125_init-structure.sql  20230430112034_seed_table_events.sql
src/config/: database.py  envvar.py  logger.py  worker.py
src/core/: __init__.py  helpers.py
src/core/entity/: account.py  billing.py  discount.py  event.py  transaction.py
src/core/repository/: account.py  billing.py  discount.py  event.py  ledger.py  price.py
src/core/tasks/: create_charge.py  create_invoice.py  helpers.py
src/core/usecase/: account_create.py  charge_debit.py  get_total_credit.py  receive_credit.py  receive_event.py  transform_to_post_paid.py  transform_to_pre_paid.py
src/core/usecase/driven/: creating_account.py  creating_charge.py  creating_discount.py  creating_invoice.py  creating_invoice_item.py  creating_transaction.py  fetch_billing_user.py  reading_account.py  reading_discount.py  reading_event.py  reading_invoice.py  reading_transaction.py  update_account.py  update_transaction.py
src/core/usecase/driven/billing/: billing_charge.py  billing_fetch_user.py  billing_fetching_invoice.py  billing_updating_invoice.py
src/core/usecase/post_paid/: get_total_debit.py  receive_event.py  transform_to_pre_paid.py
src/core/usecase/pre_paid/: get_total_credit.py  receive_credit.py  receive_event.py  transform_to_post_paid.py
src/presentation/: job.py  kafka.py  messaging.py  server.py  worker.py
tests/: conftest.py
tests/core/repository/: test_account.py  test_billing.py  test_discount.py  test_event.py  test_ledger.py
tests/core/tasks/: test_create_charge.py  test_create_invoice.py
tests/core/usecase/: test_account_create.py  test_charge_debit.py  test_get_total_credit.py  test_receive_credit.py  test_receive_event.py  test_transform_to_post_paid.py  test_transform_to_pre_paid.py
tests/factory/: helpers.py
tests/presentation/: _test_worker.py  test_server.py  test_worker.py
