[tool.poetry]
name = "auth-plus-monetization"
version = "0.1.0"
description = ""
authors = ["Andrew Hanasiro <andrewkhanasiro@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
kafka-python = "^2.0.2"
redis = "^5.1.1"
huey = "^2.5.2"
gevent = "^24.10.2"
typing-extensions = "^4.12.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"
coverage = "^7.6.2"
mypy = "^1.11.2"
isort = "^5.13.2"
flake8-pyproject = "^1.2.3"
types-requests = "^2.32.0.20240914"
httpx = "^0.27.2"
responses = "^0.25.3"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = ["kafka", "huey"]
ignore_missing_imports = true
